--- a/index.html
+++ b/index.html
@@ -2,3 +2,10 @@
 layout: default
 title: Dan Palma
 ---
+<ul>
+{% for p in site.posts %}
+  <li>
+    <a href="{{p.url}}">{{ p.title }}</a>
+  </li>
+{% endfor %}
+</ul>
