--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 layout: default
 title: Dan Palma
 ---
-<ul>
-{% for p in site.posts %}
-  <li>
-    <a href="{{p.url}}">{{ p.title }}</a>
-  </li>
+{% for post in paginator.posts %}
+  <div class="row">
+    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    <p class="author">
+      <span class="date">{{ post.date }}</span>
+    </p>
+    <div class="col-lg-12">
+      {{ post.content }}
+    </div>
+  </div>
 {% endfor %}
-</ul>
+
+{% if paginator.total_pages > 1 %}
+  <div class="pagination">
+    {% if paginator.previous_page %}
+      <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+    {% else %}
+      <span class="previous">Previous</span>
+    {% endif %}
+    <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+    {% if paginator.next_page %}
+      <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+    {% else %}
+      <span class="next ">Next</span>
+    {% endif %}
+  </div>
+{% endif %}
