--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@ title: Daniel Palma
 ---
 {% for post in paginator.posts %}
   <div class="row">
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <p class="author">
-      <span class="date">{{ post.date }}</span>
-    </p>
+    <h2>{{ post.title }}</h2>
     <div class="col-lg-12">
-      {{ post.content }}
+      {{ post.excerpt }}
+      <a href="{{ post.url }}">Read more...</a>
     </div>
   </div>
 {% endfor %}
