--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Daniel Palma
     <div class="col-lg-12">
       <h2>{{ post.title }}</h2>
       {{ post.excerpt | strip_html }}
-      <a href="{{ post.url }}">Read more...</a>
+      <a href="{{ post.url }}">Read more&hellip;</a>
     </div>
   </div>
 {% endfor %}
